[project]
name = "cisco-mcp-server"
version = "0.1.0"
description = "MCP server for Cisco IOS-XE, IOS-XR, and NX-OS devices via Scrapli SSH"
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.22.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "scrapli>=2025.1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
